--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,8 +3,8 @@ img{
 }
 
 #div_upper{
-	position : absolute;
-	height : 40px;
+	/*position : absolute;*/
+	/*height : 40px;*/
 	top : 0px;
 }
 
@@ -13,10 +13,11 @@ img{
 }
 
 #div_list{
-	position : absolute;
+	/*position : absolute;*/
 	width : 100%;
 	margin : auto;
-	margin-top: -20px;
+	/*margin-top: -20px;*/
+	margin-bottom: 55px;
 }
 table{
 	width : 100%;
