- 자바스크립트로 #div_upper의 width 지정 코드 주석처리 - 모던하우스 이미지를 두 개(upper, line)으로 분리하여 line만 width를 100%로 처리

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,14 +8,14 @@ img{
 	top : 0px;
 }
 
-#div_upper img{
+#img_line {
 	width : 100%;
 }
 
 #div_list{
 	/*position : absolute;*/
 	width : 100%;
-	margin : auto;
+	/*margin : auto;*/
 	/*margin-top: -20px;*/
 	margin-bottom: 55px;
 }
